# curve-keygen

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  libtool
include/: csk.h
libcsk/: Makefile.am  config.h.in  getpass.c  getpass.h  mac.c  mac.h  mem.c  mem.h  pad.c  pad.h  stamp-h1  version.c  version.h  zcert_crypt.c  zcert_crypt.h
man/: Makefile.am  curve-keygen.1  curve-keygen.pod
src/: Makefile.am  curve-keygen.c  curve-keygen.h
